--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>refactoring</title>
+    <meta charset="utf-8" />
+    <title>I Do With Vue</title>
   </head>
   <body>
     <div id="app"></div>
