connected to database

--- a/public/index.html
+++ b/public/index.html
@@ -8,4 +8,17 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyCN5d6S8YoaktNzgdjAIAww2Kx00dd9z4s",
+      authDomain: "i-do-with-vue.firebaseapp.com",
+      databaseURL: "https://i-do-with-vue.firebaseio.com",
+      projectId: "i-do-with-vue",
+      storageBucket: "i-do-with-vue.appspot.com",
+      messagingSenderId: "75989952154"
+    };
+    firebase.initializeApp(config);
+  </script>
 </html>
