--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="/src/assets/logo2.png" />
     <title>I Do With Vue</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+    <link rel="stylesheet" href="https://use.typekit.net/esi2rhf.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons" />
   </head>
   <body>
     <div id="app"></div>
@@ -14,12 +16,12 @@
   <script>
     // Initialize Firebase
     var config = {
-      apiKey: "AIzaSyCN5d6S8YoaktNzgdjAIAww2Kx00dd9z4s",
-      authDomain: "i-do-with-vue.firebaseapp.com",
-      databaseURL: "https://i-do-with-vue.firebaseio.com",
-      projectId: "i-do-with-vue",
-      storageBucket: "i-do-with-vue.appspot.com",
-      messagingSenderId: "75989952154"
+      apiKey: 'AIzaSyCN5d6S8YoaktNzgdjAIAww2Kx00dd9z4s',
+      authDomain: 'i-do-with-vue.firebaseapp.com',
+      databaseURL: 'https://i-do-with-vue.firebaseio.com',
+      projectId: 'i-do-with-vue',
+      storageBucket: 'i-do-with-vue.appspot.com',
+      messagingSenderId: '75989952154'
     };
     firebase.initializeApp(config);
   </script>
