--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="/src/assets/logo2.png" />
+    <link rel="icon" type="image/png" href="/public/logo2.png" />
     <title>I Do With Vue</title>
     <link rel="stylesheet" href="https://use.typekit.net/esi2rhf.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" />
